--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -50,3 +50,9 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Mono', monospace;
 }
+
+// Sidebar font override
+.sidebar.sticky,
+.sidebar.sticky * {
+  font-family: 'Roboto Mono', monospace;
+}
