--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -14,7 +14,7 @@ $background-lighter         : mix(#fff, $background, 90%);
 $text                       : #222831;
 $link                       : #393e46;
 $link-dark                  : mix(#000, $link, 25%);
-$link-light                 : mix(#000, $link, 25%);
+$link-light                 : mix(#fff, $link, 25%);
 $footer                     : #b9d9e5;
 
 /* Color codes used for the site */
