--- a/_sass/theme/_air_dark.scss
+++ b/_sass/theme/_air_dark.scss
@@ -39,7 +39,7 @@ html[data-theme="dark"] {
     --global-base-color                 : #{$background};
     --global-bg-color                   : #{$background};
     --global-footer-bg-color            : #{$footer};
-    --global-border-color               : #{7aa2f7};
+    --global-border-color               : #{#7aa2f7};
     --global-dark-border-color          : #{$background-light};
     --global-code-background-color      : #fafafa;
     --global-code-text-color            : #{$darker-primary-color};
