--- a/_sass/theme/_air_dark.scss
+++ b/_sass/theme/_air_dark.scss
@@ -15,7 +15,7 @@ $text                       : #C0CAF5;
 $link                       : mix($primary-color, $text, 40%);
 $link-dark                  : mix(#000, $link, 25%);
 $link-light                 : mix(#fff, $link, 25%);
-$footer                     : #1a1b26;
+$footer                     : #7aa2f7;
 
 /* Color codes used for the site */
 $danger-color               : #ee5f5b;
