--- a/_sass/theme/_air_dark.scss
+++ b/_sass/theme/_air_dark.scss
@@ -44,7 +44,7 @@ html[data-theme="dark"] {
     --global-code-background-color      : #fafafa;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{#5b7dc1};
-    --global-link-color                 : #{$link};
+    --global-link-color                 : #{#5b7dc1};
     --global-link-color-hover           : #{#5b7dc1};
     --global-link-color-visited         : #{$link-light};
     --global-masthead-link-color        : #{$text};
