--- a/_sass/theme/_air_dark.scss
+++ b/_sass/theme/_air_dark.scss
@@ -42,7 +42,7 @@ html[data-theme="dark"] {
     --global-border-color               : #{#7aa2f7};
     --global-dark-border-color          : #{$background-light};
     --global-code-background-color      : #fafafa;
-    --global-code-text-color            : #{$darker-primary-color};
+    --global-code-text-color            : #{#5b7dc1};
     --global-fig-caption-color          : #{#5b7dc1};
     --global-link-color                 : #{#5b7dc1};
     --global-link-color-hover           : #{#5b7dc1};
