--- a/_sass/theme/_air_dark.scss
+++ b/_sass/theme/_air_dark.scss
@@ -19,7 +19,7 @@ $footer                     : #7aa2f7;
 
 /* Color codes used for the site */
 $danger-color               : #ee5f5b;
-$info-color                 : #2f7f93;
+$info-color                 : #5b7dc1;
 $notice-color               : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
