--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -44,7 +44,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-code-background-color      : #fafafa;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
-    --global-link-color                 : #{$link};
+    --global-link-color                 : #{#65b6ce};
     --global-link-color-hover           : #{$link-dark};
     --global-link-color-visited         : #{$link-light};
     --global-masthead-link-color        : #{$text};
